update and conform to 1.21.5